@startuml
title YBHMinistries - ER Diagram (derived from SQL schema files)

' Tables / Entities
entity users {
  * id : serial
  --
  name : varchar(200)
  email : varchar(200) <<unique>>
  role : varchar(100)
  status : varchar(20)
  password_hash : text
  last_login : timestamptz
  created_at : timestamptz
  updated_at : timestamptz
}

entity stories {
  * id : serial
  --
  title : varchar(255)
  date : date
  location : text
  category : varchar(255)
  body : text
  media_type : varchar(16)
  video_url : text
  thumbnail_url : text
  status : varchar(64)
  is_visible : boolean
  is_active : boolean
  created_at : timestamptz
  updated_at : timestamptz
  created_by : varchar(255)
}

entity ministries {
  * id : serial
  --
  name : varchar(255)
  slug : varchar(255) <<unique>>
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity donations_upi {
  * id : serial
  --
  label : varchar(200)
  upi_id : varchar(200)
  qr_image_url : text
  visible : boolean
  sort_order : integer
  created_at : timestamptz
}

entity donations_bank {
  * id : serial
  --
  account_name : varchar(200)
  account_number : varchar(100)
  bank_name : varchar(200)
  branch_name : varchar(200)
  ifsc_code : varchar(50)
  swift_code : varchar(100)
  upi_id : varchar(200)
  visible : boolean
  sort_order : integer
  created_at : timestamptz
}

entity events {
  * id : serial
  --
  title : varchar(255)
  date : date
  time : varchar(50)
  location : varchar(255)
  type : varchar(50)
  description : text
  extended_description : text
  capacity : varchar(50)
  image_url : text
  speakers : text[]
  registration_enabled : boolean
  published : boolean
  created_at : timestamptz
}

entity gallery_items {
  * id : serial
  --
  category : varchar(100)
  media_type : varchar(20)
  url : text
  title : text
  bucket : varchar(255)
  date : varchar(50)
  created_at : timestamptz
}

entity books {
  * id : serial
  --
  title : varchar(255)
  author : varchar(255)
  price : decimal
  pages : integer
  language : varchar(100)
  cover_image : text
  description : text
  publish_date : date
  published : boolean
}

entity worship {
  * id : serial
  --
  youtube_url : text
  title : varchar(255)
  date_posted : timestamptz
  display_order : integer
  published : boolean
}

entity sermons {
  * id : serial
  --
  youtube_url : text
  published : boolean
}

entity bible_studies {
  * id : serial
  --
  title : varchar(255)
  author : varchar(255)
  pages : integer
  study_date : date
  file_type : varchar(50)
  file_url : text
  published : boolean
}

entity reports {
  * id : serial
  --
  year : integer
  class_type : varchar(50)
  monthly_data : jsonb
  published : boolean
}

entity home_hero_images {
  * id : serial
  --
  image_url : text
  display_order : integer
  is_active : boolean
  created_at : timestamptz
}

entity home_video {
  * id : serial
  --
  video_url : text
  thumbnail_image_url : text
  is_active : boolean
  created_at : timestamptz
}

entity hero_images {
  * id : serial
  --
  desktop_url : text
  mobile_url : text
  alt_text : text
  display_order : integer
  is_active : boolean
  created_at : timestamp
}

' Implicit relationships (created_by/updated_by reference `users` by identifier/email)
users ||--o{ stories : "created_by / updated_by (implicit)"
users ||--o{ ministries : "created_by / updated_by (implicit)"
users ||--o{ donations_upi : "created_by / updated_by (implicit)"
users ||--o{ donations_bank : "created_by / updated_by (implicit)"
users ||--o{ events : "created_by / updated_by (implicit)"
users ||--o{ gallery_items : "created_by / updated_by (implicit)"
users ||--o{ books : "created_by / updated_by (implicit)"
users ||--o{ worship : "created_by / updated_by (implicit)"
users ||--o{ sermons : "created_by / updated_by (implicit)"
users ||--o{ bible_studies : "created_by / updated_by (implicit)"
users ||--o{ reports : "created_by / updated_by (implicit)"
users ||--o{ home_hero_images : "created_by / updated_by (implicit)"
users ||--o{ home_video : "created_by / updated_by (implicit)"
users ||--o{ hero_images : "created_by / updated_by (implicit)"

' Note: There are few explicit foreign key constraints in the schemas; most links are by identifier strings (e.g., created_by)

@enduml
